--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -252,3 +252,65 @@
 	pages = {1124--1131},
 	file = {Full Text PDF:/home/tico/Zotero/storage/HWGZCMVW/Tversky and Kahneman - 1974 - Judgment under Uncertainty Heuristics and Biases.pdf:application/pdf},
 }
+
+
+@article{rampin_taguette_2021,
+	title = {Taguette: open-source qualitative data analysis},
+	volume = {6},
+	issn = {2475-9066},
+	shorttitle = {Taguette},
+	url = {https://joss.theoj.org/papers/10.21105/joss.03522},
+	doi = {10.21105/joss.03522},
+	abstract = {Rampin et al., (2021). Taguette: open-source qualitative data analysis. Journal of Open Source Software, 6(68), 3522, https://doi.org/10.21105/joss.03522},
+	language = {en},
+	number = {68},
+	urldate = {2024-09-30},
+	journal = {Journal of Open Source Software},
+	author = {Rampin, Rémi and Rampin, Vicky},
+	month = dec,
+	year = {2021},
+	pages = {3522},
+	file = {Full Text PDF:/home/tico/Zotero/storage/NNYEX8CC/Rampin and Rampin - 2021 - Taguette open-source qualitative data analysis.pdf:application/pdf},
+}
+
+@incollection{meister_tact_2023,
+	address = {London},
+	title = {From {TACT} to {CATMA}, or, a mindful approach to text annotation and analysis},
+	isbn = {978-1-80008-420-9},
+	abstract = {On Making in the Digital Humanities fills a gap in our understanding of digital humanities projects and craft by exploring the processes of making as much as the products that arise from it.The volume draws focus to the interwoven layers of human and technological textures that constitute digital humanities scholarship. To do this, it assembles a group of well-known, experienced and emerging scholars in the digital humanities to reflect on various forms of making (we privilege here the creative and applied side of the digital humanities). The volume honours the work of John Bradley, as it is totemic of a practice of making that is deeply informed by critical perspectives. A special chapter also honours the profound contributions that this volume’s co-editor, Stéfan Sinclair, made to the creative, applied and intellectual praxis of making and the digital humanities. Stéfan Sinclair passed away on 6 August 2020.The chapters gathered here are individually important, but together provide a very human view on what it is to do the digital humanities, in the past, present and future. This book will accordingly be of interest to researchers, teachers and students of the digital humanities; creative humanities, including maker spaces and culture; information studies; the history of computing and technology; and the history of science and the humanities.},
+	language = {en},
+	booktitle = {On {Making} in the {Digital} {Humanities}: {The} scholarship of digital humanities development in honour of {John} {Bradley}},
+	publisher = {UCL Press},
+	author = {Meister, Jan Christoph},
+	editor = {Nyhan, Julianne and Rockwell, Geoffrey and Sinclair, Stéfan and Ortolja-Baird, Alexandra},
+	month = mar,
+	year = {2023},
+	note = {Google-Books-ID: YdatEAAAQBAJ},
+	keywords = {Computers / General, Computers / Information Technology},
+	pages = {213--250},
+}
+
+@misc{huang_rqda_2016,
+	title = {{RQDA}: {R}-based {Qualitative} {Data} {Analysis}},
+	url = {http://rqda.r-forge.r-project.org/},
+	author = {Huang, Ronggui},
+	year = {2016},
+}
+
+@article{strippel_brat_2022,
+	title = {{BRAT} {Rapid} {Annotation} {Tool}},
+	volume = {70},
+	issn = {1615-634X, 2942-3317},
+	url = {https://www.nomos-elibrary.de/10.5771/1615-634X-2022-4-446/brat-rapid-annotation-tool-volume-70-2022-issue-4?page=1},
+	doi = {10.5771/1615-634X-2022-4-446},
+	language = {de},
+	number = {4},
+	urldate = {2024-09-30},
+	journal = {M\&K Medien \& Kommunikationswissenschaft},
+	author = {Strippel, Christian and Laugwitz, Laura and Paasch-Colberg, Sünje and Esau, Katharina and Heft, Annett},
+	month = nov,
+	year = {2022},
+	note = {Publisher: Nomos Verlagsgesellschaft mbH \& Co. KG},
+	pages = {446--461},
+	file = {Full Text PDF:/home/tico/Zotero/storage/USAGXY5F/Strippel et al. - 2022 - BRAT Rapid Annotation Tool.pdf:application/pdf},
+}
