--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -43,7 +43,7 @@
 	author = {Urman, Aleksandra and Makhortykh, Mykola and Ulloa, Roberto and Kulshrestha, Juhi},
 	month = aug,
 	year = {2022},
-	keywords = {Algorithm auditing, Conspiracy theories, Information distribution, Political communication, Web search},
+	keywords = {Web search, Algorithm auditing, Conspiracy theories, Information distribution, Political communication},
 	pages = {101860},
 	file = {Full Text:/home/tico/Zotero/storage/YNYNDNSG/Urman et al. - 2022 - Where the earth is flat and 911 is an inside job.pdf:application/pdf;ScienceDirect Snapshot:/home/tico/Zotero/storage/WU7BAMJN/S0736585322000934.html:text/html;Urman et al. - 2022 - Where the earth is flat and 911 is an inside job.pdf:/home/tico/Zotero/storage/MPDQWYXN/Urman et al. - 2022 - Where the earth is flat and 911 is an inside job.pdf:application/pdf},
 }
@@ -94,7 +94,7 @@
 	urldate = {2024-01-03},
 	author = {{Artem Golubin}},
 	year = {2023},
-	keywords = {Internet, Internet - WWW/HTTP, selectolax, Text Processing - Markup - HTML},
+	keywords = {Internet, Text Processing - Markup - HTML, Internet - WWW/HTTP, selectolax},
 	file = {Snapshot:/home/tico/Zotero/storage/59MER3VP/selectolax.html:text/html},
 }
 
@@ -153,21 +153,20 @@
 	file = {Full Text PDF:/home/tico/Zotero/storage/FE5I9FEK/Flaxman et al. - 2016 - Filter Bubbles, Echo Chambers, and Online News Con.pdf:application/pdf;Snapshot:/home/tico/Zotero/storage/8U5M23HR/2223402.html:text/html},
 }
 
-@article{adam_improving_2024,
-	title = {Improving the {Quality} of {Individual}-{Level} {Web} {Tracking}: {Challenges} of {Existing} {Approaches} and {Introduction} of a {New} {Content} and {Long}-{Tail} {Sensitive} {Academic} {Solution}},
-	issn = {0894-4393},
-	shorttitle = {Improving the {Quality} of {Individual}-{Level} {Web} {Tracking}},
-	url = {https://doi.org/10.1177/08944393241287793},
-	doi = {10.1177/08944393241287793},
-	abstract = {This article evaluates the quality of data collection in individual-level desktop web tracking used in the social sciences and shows that the existing approaches face sampling issues, validity issues due to the lack of content-level data and their disregard for the variety of devices and long-tail consumption patterns as well as transparency and privacy issues. To overcome some of these problems, the article introduces a new academic web tracking solution, WebTrack, an open-source tracking tool maintained by a major European research institution, GESIS. The design logic, the interfaces, and the backend requirements for WebTrack are discussed, followed by a detailed examination of the strengths and weaknesses of the tool. Finally, using data from 1,185 participants, the article empirically illustrates how an improvement in data collection through WebTrack leads to innovative shifts in the use of tracking data. As WebTrack allows for collecting the content people are exposed to beyond the classical news platforms, it can greatly improve the detection of politics-related information consumption in tracking data through automated content analysis compared to traditional approaches that rely on the source-level analysis.},
-	language = {en},
-	urldate = {2024-10-18},
-	journal = {Social Science Computer Review},
-	author = {Adam, Silke and Makhortykh, Mykola and Maier, Michaela and Aigenseer, Viktor and Urman, Aleksandra and Gil Lopez, Teresa and Christner, Clara and de León, Ernesto and Ulloa, Roberto},
-	month = oct,
+@misc{adam_improving_2024,
+	title = {Improving the quality of individual-level online information tracking: challenges of existing approaches and introduction of a new content- and long-tail sensitive academic solution},
+	shorttitle = {Improving the quality of individual-level online information tracking},
+	url = {http://arxiv.org/abs/2403.02931},
+	doi = {10.48550/arXiv.2403.02931},
+	abstract = {This article evaluates the quality of data collection in individual-level desktop information tracking used in the social sciences and shows that the existing approaches face sampling issues, validity issues due to the lack of content-level data and their disregard of the variety of devices and long-tail consumption patterns as well as transparency and privacy issues. To overcome some of these problems, the article introduces a new academic tracking solution, WebTrack, an open source tracking tool maintained by a major European research institution. The design logic, the interfaces and the backend requirements for WebTrack, followed by a detailed examination of strengths and weaknesses of the tool, are discussed. Finally, using data from 1185 participants, the article empirically illustrates how an improvement in the data collection through WebTrack leads to new innovative shifts in the processing of tracking data. As WebTrack allows collecting the content people are exposed to on more than classical news platforms, we can strongly improve the detection of politics-related information consumption in tracking data with the application of automated content analysis compared to traditional approaches that rely on the list-based identification of news.},
+	urldate = {2024-05-01},
+	publisher = {arXiv},
+	author = {Adam, Silke and Makhortykh, Mykola and Maier, Michaela and Aigenseer, Viktor and Urman, Aleksandra and Lopez, Teresa Gil and Christner, Clara and de León, Ernesto and Ulloa, Roberto},
+	month = mar,
 	year = {2024},
-	note = {Publisher: SAGE Publications Inc},
-	pages = {08944393241287793},
+	note = {arXiv:2403.02931 [cs]},
+	keywords = {Computer Science - Computers and Society},
+	file = {arXiv Fulltext PDF:/home/tico/Zotero/storage/AD5CN53F/Adam et al. - 2024 - Improving the quality of individual-level online i.pdf:application/pdf;arXiv.org Snapshot:/home/tico/Zotero/storage/IZL64M7V/2403.html:text/html},
 }
 
 @article{dahlke_quantifying_2023,
@@ -187,22 +186,6 @@
 	file = {SAGE PDF Full Text:/home/tico/Zotero/storage/3PWEECFH/Dahlke et al. - 2023 - Quantifying the Systematic Bias in the Accessibili.pdf:application/pdf},
 }
 
-@inproceedings{schelb_assessing_2024,
-	address = {Bangkok, Thailand},
-	title = {Assessing {In}-context {Learning} and {Fine}-tuning for {Topic} {Classification} of {German} {Web} {Data}},
-	url = {https://aclanthology.org/2024.acl-srw.22},
-	abstract = {Researchers in the political and social sciences often rely on classification models to analyze trends in information consumption by examining browsing histories of millions of webpages. Automated scalable methods are necessary due to the impracticality of manual labeling. In this paper, we model the detection of topic-related content as a binary classification task and compare the accuracy of fine-tuned pre-trained encoder models against in-context learning strategies. Using only a few hundred annotated data points per topic, we detect content related to three German policies in a database of scraped webpages. We compare multilingual and monolingual models, as well as zero and few-shot approaches, and investigate the impact of negative sampling strategies and the combination of URL \& content-based features. Our results show that a small sample of annotated data is sufficient to train an effective classifier. Fine-tuning encoder-based models yields better results than in-context learning. Classifiers using both URL \& content-based features perform best, while using URLs alone provides adequate results when content is unavailable.},
-	urldate = {2024-08-26},
-	booktitle = {Proceedings of the 62nd {Annual} {Meeting} of the {Association} for {Computational} {Linguistics} ({Volume} 4: {Student} {Research} {Workshop})},
-	publisher = {Association for Computational Linguistics},
-	author = {Schelb, Julian and Spitz, Andreas and Ulloa, Roberto},
-	editor = {Fu, Xiyan and Fleisig, Eve},
-	month = aug,
-	year = {2024},
-	pages = {238--252},
-	file = {Full Text PDF:/home/tico/Zotero/storage/GSKGVPLN/Schelb et al. - 2024 - Assessing In-context Learning and Fine-tuning for .pdf:application/pdf},
-}
-
 @inproceedings{shen_unintentional_2019,
 	title = {Unintentional affective priming during labeling may bias labels},
 	url = {https://ieeexplore.ieee.org/abstract/document/8925466},
@@ -214,7 +197,7 @@
 	month = sep,
 	year = {2019},
 	note = {ISSN: 2156-8111},
-	keywords = {Affective computing, computer vision, crowdsourcing, Crowdsourcing, Decision making, emotion recognition, Emotion recognition, Entropy, Labeling, Mood, Task analysis},
+	keywords = {Decision making, Entropy, computer vision, Task analysis, Crowdsourcing, Emotion recognition, Mood, crowdsourcing, Labeling, Affective computing, emotion recognition},
 	pages = {587--593},
 	file = {IEEE Xplore Abstract Record:/home/tico/Zotero/storage/HMUUUCWU/8925466.html:text/html},
 }
@@ -254,7 +237,6 @@
 	file = {Full Text PDF:/home/tico/Zotero/storage/HWGZCMVW/Tversky and Kahneman - 1974 - Judgment under Uncertainty Heuristics and Biases.pdf:application/pdf},
 }
 
-
 @article{rampin_taguette_2021,
 	title = {Taguette: open-source qualitative data analysis},
 	volume = {6},
@@ -287,7 +269,7 @@
 	month = mar,
 	year = {2023},
 	note = {Google-Books-ID: YdatEAAAQBAJ},
-	keywords = {Computers / General, Computers / Information Technology},
+	keywords = {Computers / Information Technology, Computers / General},
 	pages = {213--250},
 }
 
@@ -314,4 +296,113 @@
 	note = {Publisher: Nomos Verlagsgesellschaft mbH \& Co. KG},
 	pages = {446--461},
 	file = {Full Text PDF:/home/tico/Zotero/storage/USAGXY5F/Strippel et al. - 2022 - BRAT Rapid Annotation Tool.pdf:application/pdf},
+}
+
+@article{kacperski_examining_2024,
+	title = {Examining bias perpetuation in academic search engines: {An} algorithm audit of {Google} and {Semantic} {Scholar}},
+	volume = {29},
+	copyright = {Copyright (c) 2024 First Monday},
+	issn = {1396-0466},
+	shorttitle = {Examining bias perpetuation in academic search engines},
+	url = {https://firstmonday.org/ojs/index.php/fm/article/view/13730},
+	doi = {10.5210/fm.v29i11.13730},
+	abstract = {Researchers rely on academic Web search engines to find scientific sources, but search engine mechanisms may selectively present content that aligns with biases embedded in queries. This study examines whether confirmation biased queries prompted into Google Scholar and Semantic Scholar will yield results aligned with a query’s bias. Six queries (topics across health and technology domains such as ‘vaccines’, ‘Internet use’) were analyzed for disparities in search results. We confirm that biased queries (targeting ‘benefits’ or ‘risks’) affect search results in line with bias, with technology-related queries displaying more significant disparities. Overall, Semantic Scholar exhibited fewer disparities than Google Scholar. Topics rated as more polarizing did not consistently show more disparate results. Academic search results that perpetuate confirmation bias have strong implications for both researchers and citizens searching for evidence. More research is needed to explore how scientific inquiry and academic search engines interact.},
+	language = {en},
+	number = {11},
+	urldate = {2024-11-05},
+	journal = {First Monday},
+	author = {Kacperski, Celina and Bielig, Mona and Makhortykh, Mykola and Sydorova, Maryna and Ulloa, Roberto},
+	month = nov,
+	year = {2024},
+	keywords = {academic search engines, algorithm bias, algorithmic audit, confirmation bias, search bias},
+	file = {Full Text PDF:/home/tico/Zotero/storage/PDGQ6NTR/Kacperski et al. - 2024 - Examining bias perpetuation in academic search engines An algorithm audit of Google and Semantic Sc.pdf:application/pdf},
+}
+
+@article{wojcieszak_non-news_2024,
+	title = {Non-{News} {Websites} {Expose} {People} to {More} {Political} {Content} {Than} {News} {Websites}: {Evidence} from {Browsing} {Data} in {Three} {Countries}},
+	volume = {41},
+	issn = {1058-4609},
+	shorttitle = {Non-{News} {Websites} {Expose} {People} to {More} {Political} {Content} {Than} {News} {Websites}},
+	url = {https://doi.org/10.1080/10584609.2023.2238641},
+	doi = {10.1080/10584609.2023.2238641},
+	abstract = {Most scholars focus on the prevalence and democratic effects of (partisan) news exposure. This focus misses large parts of online activities of a majority of politically disinterested citizens. Although political content also appears outside of news outlets and may profoundly shape public opinion, its prevalence and effects are under-studied at scale. This project combines three-wave panel survey data from three countries (total N = 7,266) with online behavioral data from the same participants (over 106M visits). We create a multi-lingual classifier to identify political content both in news and outside (e.g. in shopping or entertainment sites). We find that news consumption is infrequent: just 3.4\% of participants’ online browsing comprised visits to news sites. Only between 14\% (NL) and 36\% (US) of these visits were to news about politics. The overwhelming majority of participants' visits were to non-news sites. Although only 1.6\% of those visits related to politics, in absolute terms, citizens encounter politics more frequently outside of news than within news. Out of every 10 visits to political content, 3.4 come from news and 6.6 from non-news sites. Furthermore, exposure to political content outside news domains had the same – and in some cases stronger - associations with key democratic attitudes and behaviors as news exposure. These findings offer a comprehensive analysis of the online political (not solely news) ecosystem and demonstrate the importance of assessing the prevalence and effects of political content in non-news sources.},
+	number = {1},
+	urldate = {2025-02-15},
+	journal = {Political Communication},
+	author = {Wojcieszak, Magdalena and Menchen-Trevino, Ericka and Clemm von Hohenberg, Bernhard and de Leeuw, Sjifra and Gonçalves, João and Davidson, Sam and Gonçalves, Alexandre},
+	month = jan,
+	year = {2024},
+	note = {Publisher: Routledge
+\_eprint: https://doi.org/10.1080/10584609.2023.2238641},
+	keywords = {computational social science, information consumption, misinformation, News exposure, polarization, political content, political knowledge},
+	pages = {129--151},
+	file = {Full Text PDF:/home/tico/Zotero/storage/5XVJYSIE/Wojcieszak et al. - 2024 - Non-News Websites Expose People to More Political Content Than News Websites Evidence from Browsing.pdf:application/pdf},
+}
+
+@misc{gesis_panel_team_gesis_2025,
+	title = {{GESIS} {Panel}.dbd - {Pre}-{ReleaseGESIS} {Panel}.dbd - {Pre}-{Release}},
+	copyright = {Alle im GESIS DBK veröffentlichten Metadaten sind frei verfügbar unter den Creative Commons CC0 1.0 Universal Public Domain Dedication. GESIS bittet jedoch darum, dass Sie alle Metadatenquellen anerkennen und sie nennen, etwa die Datengeber oder jeglichen Aggregator, inklusive GESIS selbst. Für weitere Informationen siehe https://dbk.gesis.org/dbksearch/guidelines.asp?db=d, All metadata from GESIS DBK are available free of restriction under the Creative Commons CC0 1.0 Universal Public Domain Dedication. However, GESIS requests that you actively acknowledge and give attribution to all metadata sources, such as the data providers and any data aggregators, including GESIS. For further information see https://dbk.gesis.org/dbksearch/guidelines.asp},
+	url = {https://search.gesis.org/research_data/ZA5668?doi=10.4232/1.14467},
+	doi = {10.4232/1.14467},
+	abstract = {The pre-release of the GESIS Panel.dbd includes survey data and web tracking data collected for the 2024 European elections. The questionnaires contain items on the demographics and political attitudes of the participants.},
+	language = {en},
+	urldate = {2025-02-15},
+	publisher = {GESIS},
+	author = {{GESIS Panel Team}},
+	collaborator = {{GESIS — Leibniz-Institut Für Sozialwissenschaften}},
+	year = {2025},
+	keywords = {KAT13 Political Ideology, KAT14 Political Issues, KAT15 Political Attitudes and Behavior, KAT50 Society, Culture, KAT62 Communication, Public Opinion, Media},
+}
+
+@article{ulloa_scaling_2024,
+	title = {Scaling up search engine audits: {Practical} insights for algorithm auditing},
+	volume = {50},
+	issn = {0165-5515},
+	shorttitle = {Scaling up search engine audits},
+	url = {https://doi.org/10.1177/01655515221093029},
+	doi = {10.1177/01655515221093029},
+	abstract = {Algorithm audits have increased in recent years due to a growing need to independently assess the performance of automatically curated services that process, filter and rank the large and dynamic amount of information available on the Internet. Among several methodologies to perform such audits, virtual agents stand out because they offer the ability to perform systematic experiments, simulating human behaviour without the associated costs of recruiting participants. Motivated by the importance of research transparency and replicability of results, this article focuses on the challenges of such an approach. It provides methodological details, recommendations, lessons learned and limitations based on our experience of setting up experiments for eight search engines (including main, news, image and video sections) with hundreds of virtual agents placed in different regions. We demonstrate the successful performance of our research infrastructure across multiple data collections, with diverse experimental designs, and point to different changes and strategies that improve the quality of the method. We conclude that virtual agents are a promising venue for monitoring the performance of algorithms across long periods of time, and we hope that this article can serve as a basis for further research in this area.},
+	language = {en},
+	number = {2},
+	urldate = {2025-02-15},
+	journal = {Journal of Information Science},
+	author = {Ulloa, Roberto and Makhortykh, Mykola and Urman, Aleksandra},
+	month = apr,
+	year = {2024},
+	note = {Publisher: SAGE Publications Ltd},
+	pages = {404--419},
+	file = {SAGE PDF Full Text:/home/tico/Zotero/storage/D28QMPXB/Ulloa et al. - 2024 - Scaling up search engine audits Practical insights for algorithm auditing.pdf:application/pdf},
+}
+
+@inproceedings{schelb_assessing_2024,
+	address = {Bangkok, Thailand},
+	title = {Assessing {In}-context {Learning} and {Fine}-tuning for {Topic} {Classification} of {German} {Web} {Data}},
+	url = {https://aclanthology.org/2024.acl-srw.22/},
+	doi = {10.18653/v1/2024.acl-srw.22},
+	abstract = {Researchers in the political and social sciences often rely on classification models to analyze trends in information consumption by examining browsing histories of millions of webpages. Automated scalable methods are necessary due to the impracticality of manual labeling. In this paper, we model the detection of topic-related content as a binary classification task and compare the accuracy of fine-tuned pre-trained encoder models against in-context learning strategies. Using only a few hundred annotated data points per topic, we detect content related to three German policies in a database of scraped webpages. We compare multilingual and monolingual models, as well as zero and few-shot approaches, and investigate the impact of negative sampling strategies and the combination of URL \& content-based features. Our results show that a small sample of annotated data is sufficient to train an effective classifier. Fine-tuning encoder-based models yields better results than in-context learning. Classifiers using both URL \& content-based features perform best, while using URLs alone provides adequate results when content is unavailable.},
+	urldate = {2025-02-15},
+	booktitle = {Proceedings of the 62nd {Annual} {Meeting} of the {Association} for {Computational} {Linguistics} ({Volume} 4: {Student} {Research} {Workshop})},
+	publisher = {Association for Computational Linguistics},
+	author = {Schelb, Julian and Ulloa, Roberto and Spitz, Andreas},
+	editor = {Fu, Xiyan and Fleisig, Eve},
+	month = aug,
+	year = {2024},
+	pages = {144--158},
+	file = {Full Text PDF:/home/tico/Zotero/storage/XK7ZMXN9/Schelb et al. - 2024 - Assessing In-context Learning and Fine-tuning for Topic Classification of German Web Data.pdf:application/pdf},
+}
+
+@misc{ulloa_beyond_2024,
+	title = {Beyond time delays: {How} web scraping distorts measures of online news consumption},
+	shorttitle = {Beyond time delays},
+	url = {http://arxiv.org/abs/2412.00479},
+	doi = {10.48550/arXiv.2412.00479},
+	abstract = {As the exploration of digital behavioral data revolutionizes communication research, understanding the nuances of data collection methodologies becomes increasingly pertinent. This study focuses on one prominent data collection approach, web scraping, and more specifically, its application in the growing field of research relying on web browsing data. We investigate discrepancies between content obtained directly during user interaction with a website (in-situ) and content scraped using the URLs of participants' logged visits (ex-situ) with various time delays (0, 30, 60, and 90 days). We find substantial disparities between the methodologies, uncovering that errors are not uniformly distributed across news categories regardless of classification method (domain, URL, or content analysis). These biases compromise the precision of measurements used in existing literature. The ex-situ collection environment is the primary source of the discrepancies ({\textasciitilde}33.8\%), while the time delays in the scraping process play a smaller role (adding {\textasciitilde}6.5 percentage points in 90 days). Our research emphasizes the need for data collection methods that capture web content directly in the user's environment. However, acknowledging its complexities, we further explore strategies to mitigate biases in web-scraped browsing histories, offering recommendations for researchers who rely on this method and laying the groundwork for developing error-correction frameworks.},
+	urldate = {2025-02-15},
+	publisher = {arXiv},
+	author = {Ulloa, Roberto and Mangold, Frank and Schmidt, Felix and Gilsbach, Judith and Stier, Sebastian},
+	month = nov,
+	year = {2024},
+	note = {arXiv:2412.00479 [cs]},
+	keywords = {Computer Science - Computers and Society},
+	file = {Preprint PDF:/home/tico/Zotero/storage/KELW86SX/Ulloa et al. - 2024 - Beyond time delays How web scraping distorts measures of online news consumption.pdf:application/pdf;Snapshot:/home/tico/Zotero/storage/YK5HB4T8/2412.html:text/html},
 }
