updating the paper

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -153,21 +153,20 @@
 	file = {Full Text PDF:/home/tico/Zotero/storage/FE5I9FEK/Flaxman et al. - 2016 - Filter Bubbles, Echo Chambers, and Online News Con.pdf:application/pdf;Snapshot:/home/tico/Zotero/storage/8U5M23HR/2223402.html:text/html},
 }
 
-@article{adam_improving_2024,
-	title = {Improving the {Quality} of {Individual}-{Level} {Web} {Tracking}: {Challenges} of {Existing} {Approaches} and {Introduction} of a {New} {Content} and {Long}-{Tail} {Sensitive} {Academic} {Solution}},
-	issn = {0894-4393},
-	shorttitle = {Improving the {Quality} of {Individual}-{Level} {Web} {Tracking}},
-	url = {https://doi.org/10.1177/08944393241287793},
-	doi = {10.1177/08944393241287793},
-	abstract = {This article evaluates the quality of data collection in individual-level desktop web tracking used in the social sciences and shows that the existing approaches face sampling issues, validity issues due to the lack of content-level data and their disregard for the variety of devices and long-tail consumption patterns as well as transparency and privacy issues. To overcome some of these problems, the article introduces a new academic web tracking solution, WebTrack, an open-source tracking tool maintained by a major European research institution, GESIS. The design logic, the interfaces, and the backend requirements for WebTrack are discussed, followed by a detailed examination of the strengths and weaknesses of the tool. Finally, using data from 1,185 participants, the article empirically illustrates how an improvement in data collection through WebTrack leads to innovative shifts in the use of tracking data. As WebTrack allows for collecting the content people are exposed to beyond the classical news platforms, it can greatly improve the detection of politics-related information consumption in tracking data through automated content analysis compared to traditional approaches that rely on the source-level analysis.},
-	language = {en},
-	urldate = {2025-02-18},
-	journal = {Social Science Computer Review},
-	author = {Adam, Silke and Makhortykh, Mykola and Maier, Michaela and Aigenseer, Viktor and Urman, Aleksandra and Gil Lopez, Teresa and Christner, Clara and de León, Ernesto and Ulloa, Roberto},
-	month = oct,
+@misc{adam_improving_2024,
+	title = {Improving the quality of individual-level online information tracking: challenges of existing approaches and introduction of a new content- and long-tail sensitive academic solution},
+	shorttitle = {Improving the quality of individual-level online information tracking},
+	url = {http://arxiv.org/abs/2403.02931},
+	doi = {10.48550/arXiv.2403.02931},
+	abstract = {This article evaluates the quality of data collection in individual-level desktop information tracking used in the social sciences and shows that the existing approaches face sampling issues, validity issues due to the lack of content-level data and their disregard of the variety of devices and long-tail consumption patterns as well as transparency and privacy issues. To overcome some of these problems, the article introduces a new academic tracking solution, WebTrack, an open source tracking tool maintained by a major European research institution. The design logic, the interfaces and the backend requirements for WebTrack, followed by a detailed examination of strengths and weaknesses of the tool, are discussed. Finally, using data from 1185 participants, the article empirically illustrates how an improvement in the data collection through WebTrack leads to new innovative shifts in the processing of tracking data. As WebTrack allows collecting the content people are exposed to on more than classical news platforms, we can strongly improve the detection of politics-related information consumption in tracking data with the application of automated content analysis compared to traditional approaches that rely on the list-based identification of news.},
+	urldate = {2024-05-01},
+	publisher = {arXiv},
+	author = {Adam, Silke and Makhortykh, Mykola and Maier, Michaela and Aigenseer, Viktor and Urman, Aleksandra and Lopez, Teresa Gil and Christner, Clara and de León, Ernesto and Ulloa, Roberto},
+	month = mar,
 	year = {2024},
-	note = {Publisher: SAGE Publications Inc},
-	pages = {08944393241287793},
+	note = {arXiv:2403.02931 [cs]},
+	keywords = {Computer Science - Computers and Society},
+	file = {arXiv Fulltext PDF:/home/tico/Zotero/storage/AD5CN53F/Adam et al. - 2024 - Improving the quality of individual-level online i.pdf:application/pdf;arXiv.org Snapshot:/home/tico/Zotero/storage/IZL64M7V/2403.html:text/html},
 }
 
 @article{dahlke_quantifying_2023,
